force-app/main/default/objects/Management_Action__c/Management_Action__c.object-meta.xml
<CustomObject>
    <label>Management Action</label>
    <nameField>
        <displayFormat>MA-{000000}</displayFormat>
        <label>Management Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Management Actions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>