force-app/main/default/objects/Management_Action__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <label>Importance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Importance</valueSetName>
    </valueSet>
</CustomField>