force-app/main/default/objects/Management_Action__c/fields/Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_User__c</fullName>
    <formula>Assigned_To__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User</label>
    <type>Checkbox</type>
</CustomField>