force-app/main/default/objects/Management_Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done,Backlog</value>
    </filters>
    <label>All</label>
</ListView>