force-app/main/default/objects/Management_Action__c/listViews/My_Actions.listView-meta.xml
<ListView>
    <fullName>My_Actions</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Age__c</columns>
    <columns>Due_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done</value>
    </filters>
    <label>My Actions</label>
</ListView>