force-app/main/default/objects/Management_Action__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Priority__c</columns>
    <columns>Urgency__c</columns>
    <columns>Importance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done,Backlog</value>
    </filters>
    <label>Open</label>
</ListView>