force-app/main/default/objects/Management_Action__c/listViews/Overdue.listView-meta.xml
<ListView>
    <fullName>Overdue</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Overdue</label>
    <sharedTo>
        <group>Senior_Management_Team</group>
    </sharedTo>
</ListView>